# csv2vex

./: .gitignore  LICENSE  README.md  pyproject.toml  vex_config_template.json
csv2vex/: __init__.py  __main__.py  utils.py
tests/: test_utils.py
